[project]
name = "docker-cache-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "motty", email = "motty.mio2@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
